--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,1 @@
-spring.data.mongodb.host=${DB_HOST}
-spring.data.mongodb.port=${DB_PORT}
-spring.data.mongodb.username=${DB_USERNAME}
-spring.data.mongodb.password=${DB_PASSWORD}
-spring.data.mongodb.database=${DB_NAME}
-spring.data.mongodb.authentication-database=${DB_AUTH}
+spring.data.mongodb.uri=mongodb+srv://htuser:hungthinh123@cluster0.apuky.mongodb.net/crm_data?retryWrites=true&w=majority
